[package]
name = "cyberguard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
nix = "0.20"
daemonize = "0.5"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.3"
log = "0.4"
log4rs = "0.11"
inotify = "0.10.2"
libc = { version = "0.2", features = ["std"] }
fsevent = "0.4"
notify = "5.0"